Fixed layout issues. Added sum counter. Cart imports correct at checkout.

--- a/css/custom.css
+++ b/css/custom.css
@@ -54,7 +54,7 @@ background-color: rgba(45, 105, 194, 0.24);
   }
   
   .bg-grey {
-  background-color: #eae8e8;
+  background-color: #c2c0c0;
   }
   
   @media (min-width: 992px) {
